--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,26 +1,24 @@
-		header {
-			top: 0;
-			height: 70px;
-			width: 100%;
-			justify-content: center;
-			align-items: center;
-			border: 1px solid e93e3e;
+header {
+	top: 0;
+	height: 70px;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid e93e3e;
+}
 
+header .border {
+	width: 100%;
+	border-bottom: 1px solid #CCCCCC;
+}
 
-		}
-
-		header .borde {
-			width: 100%;
-			border-bottom: 1px solid #CCCCCC;
-		}
-
-		header .logo {
-			display: inline-block;
-			left: 20px;
-			justify-self: center;
-			height: 70px;
-			width: 100%;
-			background-image: url(../images/logo.png);
-			background-repeat: no-repeat;
-			background-position: left;
-		}
+header .logo {
+	display: inline-block;
+	left: 20px;
+	justify-self: center;
+	height: 70px;
+	width: 100%;
+	background-image: url(../images/logo.png);
+	background-repeat: no-repeat;
+	background-position: left;
+}
