--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,15 +1,8 @@
-* {
-	margin: 0;
-	padding: 0;
+body {
+	margin:0px;
+	padding:0px;
+
 	color: #484848;
 	font-size: 14px;
-	font-family: Circular,
-		"Helvetica Neue",
-		Helvetica,
-		Arial,
-		sans-serif;
-}
-
-body {
-	margin: 0;
+	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
