--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,64 +1,61 @@
-.container {
-	max-width: 1000px;
-	margin-top: 30px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
 .filters {
-	display: flex;
-	position: relative;
-	align-items: center;
-	vertical-align: middle;
-	color: white;
+	background-color: white;
 	height: 70px;
 	width: 100%;
 	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-
+	border-radius: 4px;	
 }
 
-.filters button {
-	position: absolute;
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #ffffff;
-	height: 48px;
-	width: 20%;
-	border: none;
-	margin-right: 30px;
-	border-radius: 4%;
-	right: 0;
-}
+.locations {
+	display: inline-block;
+	vertical-align: middle;
 
-.filters button:hover {
-	opacity: 90%;
-}
-
-.filters .locations {
-	display: flex;
-	justify-content: center;
-	margin-left: 4px;
-	text-align: left;
-	flex-direction: column;
-	padding: 4px;
-	vertical-align: center;
 	height: 100%;
 	width: 25%;
-	gap: 0.5rem;
-}
 
-.filters .locations h3 {
-	text-justify: center;
-	font-weight: 600;
-}
-
-.filters .locations h4 {
-	text-justify: center;
-	font-weight: 400;
-	font-size: 14px;
-}
-
-.filters div:first-child {
+	margin-left: 45px;
 	border-right: 1px solid #DDDDDD;
+}
+
+.amenities {
+	display: inline-block;
+	vertical-align: middle;
+
+	height: 100%;
+    width: 25%;
+
+	margin-left: 45px;
+}
+
+h3 {
+	font-weight: 600;
+	margin-top: 12px;
+	margin-bottom: 5px;	
+}
+
+h4 {
+	font-size: 14px;
+	font-weight: 400;
+	margin-top: 5px;
+	margin-bottom: 12px;
+}
+
+button {
+	color: #FFFFFF;
+	font-size: 18px;
+	
+	height: 48px;
+	width: 20%;
+	background-color: #FF5A5F;
+	border-style: none;
+	border-radius: 4px;
+
+	float: right;
+	margin-top: 11px;
+	margin-bottom: 11px;
+	margin-right: 30px;
+}
+
+button:hover {
+	opacity: 90%;
 }
