--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,244 +1,126 @@
-ul {
-	list-style-type: none;
-}
-
-.container {
-	max-width: 1000px;
-	margin-top: 30px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 50px;
-}
-
-.filters {
-	display: flex;
-	align-items: center;
-	color: white;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-
-}
-
-.filters button {
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #ffffff;
-	height: 48px;
-	width: 20%;
-	border: none;
-	border-radius: 4%;
-
-
-}
-
-.filters button:hover {
-	opacity: 90%;
-}
-
-.filters .locations {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	margin-left: 4px;
-	text-align: left;
-	flex-direction: column;
-	padding: 4px;
-	vertical-align: center;
-	height: 100%;
-	width: 25%;
-
-
-}
-
-.filters .locations h3 {
-
-	text-justify: center;
-	font-weight: 600;
-}
-
-.filters .locations h4 {
-
-	text-justify: center;
-	font-weight: 400;
-	font-size: 14px;
-}
-
-.filters .popover {
-	position: absolute;
-	top: 70px;
-	width: 25%;
-	display: none;
-	list-style-type: none;
-	background-color: #FAFAFA;
-	border: 1px solid #DDDDDD;
-}
-
-.filters .popover ul ul {
-	margin: 10px;
-}
-
-.filters .popover H2 {
-	font-size: 16px;
-}
-
-.filters .locations:hover .popover {
-	display: flex;
-}
-
-.filters .amenities:hover .popover {
-	display: flex;
-}
-
-.filters .amenities {
-	display: flex;
-	justify-content: center;
-	margin-left: 4px;
-	text-align: left;
-	flex-direction: column;
-	vertical-align: center;
-	height: 100%;
-	width: 25%;
-}
-
-.filters .amenities h3 {
-	text-justify: center;
-	font-weight: 600;
-}
-
-.filters .amenities h4 {
-	text-justify: center;
-	font-weight: 400;
-	font-size: 14px;
-}
-
-.filters div:first-child {
-	border-right: 1px solid #DDDDDD;
-
-}
-
 .places {
 	display: flex;
-	margin-top: 30px;
-	flex-wrap: wrap;
-	flex-direction: row;
 	justify-content: center;
-}
-
-.places article {
-	display: flex;
-	position: relative;
-	flex-direction: column;
-	width: 390px;
-	margin: 20px;
-	align-items: center;
-	border: 1px solid #FF5A5F;
-	border-radius: 4%;
+	flex-wrap: wrap;
+	margin: 45px auto;
 	text-align: center;
 }
 
-.places h1 {
-	margin-left: 10px;
-	display: block;
-	width: 100%;
-	height: auto;
-	text-align: left;
-	font-size: 30px;
+article {
+	display: flex;
+	width: 390px;
+	flex: none;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-content: flex-start;
+
+	padding-top: 10px;
+	padding-right: 20px;
+	padding-left: 20px;
+	padding-bottom: 20px;
+	margin: 20px;
+
+	border: 1px solid #FF5A5F;
+	border-radius: 4px;
 }
 
-.places article h2 {
-	font-size: 30px;
+.headline {
+	display: flex;
+	flex-direction: row;
+	position: relative;
+
+	height: 80px;
 	width: 100%;
-	margin-top: 30px;
 }
 
 .price_by_night {
-	position: absolute;
 	display: flex;
+	justify-content: center;
+	align-self: flex-end;
+
+	position: absolute;
+	right: 0;
+
+	line-height: 60px;
 	color: #FF5A5F;
-	border: 1px solid #FF5A5F;
-	border-radius: 50%;
+	font-size: 30px;
+	padding: 5px;
+	border: 4px solid #FF5A5F;
+	border-radius: 100%;
+	float: right;
 	min-width: 60px;
 	height: 60px;
-	font-size: 30px;
-	justify-content: center;
-	align-items: center;
-	right: 10px;
-	top: 10px;
 }
 
 .information {
-	display: flex;
-	margin-top: 30px;
-	flex-direction: row;
+	display: block;
 	height: 80px;
-	border: 1px solid #DDDDDD;
-}
-
-.information .max_guest {
-	width: 100px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	top: 10px;
-	right: 10px;
-	text-align: right;
-}
-
-.number_rooms {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100px;
-	flex-direction: column;
-}
-
-.number_bathrooms {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100px;
-	flex-direction: column;
-}
-
-.icon-guests {
-	background-image: url("../images/icon_group.png");
-	background-repeat: no-repeat;
 	width: 100%;
-	height: 70px;
-	background-position: center;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
+
+	padding-top: 5px;
+	padding-bottom: 12px;
+	margin-top: 10px;
+	margin-bottom: 20px;
 }
 
-.icon-rooms {
-	background-image: url("../images/icon_bed.png");
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 70px;
-	background-position: center;
-}
-
-.icon-bath {
-	background-image: url("../images/icon_bath.png");
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 70px;
-	background-position: center;
+.max_guest, .number_rooms, .number_bathrooms {
+	display: inline-block;
+	width: 100px;
+	text-align: center;
+	margin: 0px auto;
 }
 
 .user {
-	width: 100%;
-	margin-top: 30px;
-	text-align: left;
-
+	margin-top: 5px;
+	margin-bottom: 5px;	
 }
 
-.user b {
-	margin-left: 30px;
+.description {
+	text-align: left;
 }
 
-.descrption {
+h1 {
+	display: block;
 	text-align: left;
-	margin: 0 30px 20px 30px;
+	width: 95%;
+	display: block;
+	margin-top: 0px;
+	margin-left: 20px;
+	margin-bottom: 5px;
+	font-size: 30px;
+}
+
+article h2 {
+	font-size: 30px;
+	margin: 10px auto;
+	padding: 0px;
+}
+
+.guest_icon {
+	display: inline-block;
+	background-image: url("../images/icon_group.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 50px;
+	height: 50px;
+}
+
+.bed_icon {
+	display: inline-block;
+	background-image: url("../images/icon_bed.png");
+	background-repeat: no-repeat;
+	background-position: center;
+    width: 50px;
+    height: 50px;
+}
+
+.bath_icon {
+	display: inline-block;
+	background-image: url("../images/icon_bath.png");
+	background-repeat: no-repeat;
+	background-position: center;
+    width: 50px;
+    height: 50px;
 }
